tests/typing/fail/nontuple-03.stderr
error: tuples don't exist: int * int is not a valid type...
  --> tests/typing/fail/nontuple-03.rs:10:30
   |
10 |         (a : int, b : int) = non(2, 1) as float;
   |                              ^^^^^^^^^^^^^^^^^^
